--- a/difla/src/homeFlashcards.css
+++ b/difla/src/homeFlashcards.css
@@ -1,5 +1,11 @@
 body {
-    background-color: antiquewhite;
+    background-color: #3166A3;
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+}
+
+html {
+    height: 3100px;
 }
 
 #titleFlashcards {
@@ -13,6 +19,8 @@ body {
     text-align: center;
     font-size: 50px;
     margin-right: 35px;
+    color: #E88C16;
+    font-weight: 400;
 }
 
 #buttonSeeAll {
@@ -28,4 +36,56 @@ body {
 
 #arrowOrangeRight {
     width: 40px;
+}
+
+
+#cardSection {
+    margin-left: 110px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1850px;
+    flex-wrap: wrap;
+    row-gap: 70px;
+
+}
+#card {
+    width: 580px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: right;
+    
+}
+
+#cardLetter {
+    margin: 0;
+    width: 100%;
+    height: 260px;
+    border: 3px solid #E88C16;
+    border-radius: 40px;
+    background-color: #CDE6F1;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 120px;
+    color: #3166A3;
+}
+
+#buttonStart {
+    margin-top: 30px;
+    width: 100%;
+    height: 80px;
+    background-color: #E88C16;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    font-size: 30px;
+    
+}
+
+#speakerIcon {
+    width: 50px;
+    height: 50px;
+   margin: -81px 27px 0 0;
+
 }
