--- a/difla/src/minigames.css
+++ b/difla/src/minigames.css
@@ -1,22 +1,23 @@
 #minigames {
     margin-top: 230px;
     background-color: CDE6F1;
+    width: 2732px;
 }
 
 #borderBlue {
-    width: 2420px;
+    width: 2732px;
 }
 
 #sectionMinigames {
     height: 1000px;
-    margin: -21px;
+    margin-top: -21px;
     background-color: #CDE6F1;    
 }
 #minicardCardSection {
     margin-left: 120px;
     display: flex;
     justify-content: space-between;
-    max-width: 1960px;
+    max-width: 2130px;
     flex-wrap: wrap;
 }
 
@@ -28,7 +29,7 @@
 }
 
 #minigameCard {
-    width: 620px;
+    width: 680px;
     display: flex;
     flex-wrap: wrap;
     justify-content: right;
