--- a/difla/src/index.css
+++ b/difla/src/index.css
@@ -1,6 +1,10 @@
-body {
-  width: 2400px;
+html, body, #root {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  
 }
-
+.no-tab {
+  display: none;
+}
