--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-html, body {
+/* html, body {
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     background-color: #3166A3;
     max-width: 2732px;
-}
+} */
